Bug 311206 - Dolphin does not restore focus on the file view after dismissing inline-rename box with enter
Summary: Dolphin does not restore focus on the file view after dismissing inline-renam...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.1.85
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: regression
: 311458 311979 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-05 15:10 UTC by Sandro Mani
Modified: 2012-12-21 14:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.5
Sentry Crash Report:


Attachments
Patch (not quite ready yet) (8.01 KB, patch)
2012-12-05 20:42 UTC, Frank Reininghaus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Sandro Mani 2012-12-05 15:10:08 UTC
The focus is not restored on the file list view, hence keyboard nagivation etc does not work until the focus is set again, either via mouse or via tab

Reproducible: Always

Steps to Reproduce:
1. Use inline-renaming
2. Press F2 to rename a file
3. Press enter to dismiss the rename box (does not matter if you actually rename the file)




When pressing esc, focus is restored correctly.

I guess this is related to #309760

Using dolphin from kde-baseapps-4.9.90-2.fc19.x86_64
Comment 1 Frank Reininghaus 2012-12-05 17:41:50 UTC
Thanks for the bug report! I can confirm. Unfortunately, this bug is also in KDE 4.9.4.

(In reply to comment #0)
> I guess this is related to #309760

You're probably right. I'll try to find a fix ASAP.
Comment 2 Frank Reininghaus 2012-12-05 20:42:57 UTC
Created attachment 75645 [details]
Patch (not quite ready yet)

This basically reverts the last two commits to KItemListRoleEditor,

https://projects.kde.org/projects/kde/kde-baseapps/repository/revisions/951cb9c35d7a9ef814b3de5b359915968da9b881

https://projects.kde.org/projects/kde/kde-baseapps/repository/revisions/3143acc084d54d43df469b54762bfa10a7050a9f

It fixes the keyboard focus problem, but sometimes, when I try to reproduce the bug that the first of those commits fixed (crash when dragging text from the 'inline rename' text edit and dropping it on an entry in the Places Panel), I see the problem that the drag does not stop, and I get a crash on exit because the QDrag is destroyed in its own nested event loop.
Comment 3 Frank Reininghaus 2012-12-06 06:29:24 UTC
Well, actually, the drag&drop problem already exists without my patch, so that's no reason not to commit it. But I'd like to have this tested by more people - we had too many inline renaming regressions recently. I really want to get it right this time.
Comment 4 Frank Reininghaus 2012-12-06 06:48:13 UTC
I've filed a review request and will wait for feedback from testers before pushing the fix:

https://git.reviewboard.kde.org/r/107606/

You are also invited to test it, of course :-)
Comment 5 Sandro Mani 2012-12-06 08:14:22 UTC
Thanks! - Rebuild under way
Comment 6 Sandro Mani 2012-12-06 08:55:22 UTC
Works great from what I can see!
Comment 7 Frank Reininghaus 2012-12-07 21:20:34 UTC
Git commit 620f9670af432c8c7a79fd47789da1788d7d6b17 by Frank Reininghaus.
Committed on 07/12/2012 at 22:15.
Pushed by freininghaus into branch 'KDE/4.9'.

Fix keyboard focus handling after renaming items inline

This reverts 951cb9c35d7a9ef814b3de5b359915968da9b881 and
3143acc084d54d43df469b54762bfa10a7050a9f, and fixes the crash caused by
nested event loops by delaying the deletion of the KItemListRoleEditor
until the next item is renamed inline.
FIXED-IN: 4.9.5
REVIEW: 107606

M  +17   -14   dolphin/src/kitemviews/kstandarditemlistwidget.cpp
M  +1    -0    dolphin/src/kitemviews/kstandarditemlistwidget.h
M  +3    -49   dolphin/src/kitemviews/private/kitemlistroleeditor.cpp
M  +0    -12   dolphin/src/kitemviews/private/kitemlistroleeditor.h

http://commits.kde.org/kde-baseapps/620f9670af432c8c7a79fd47789da1788d7d6b17
Comment 8 Frank Reininghaus 2012-12-10 11:37:21 UTC
*** Bug 311458 has been marked as a duplicate of this bug. ***
Comment 9 Frank Reininghaus 2012-12-20 11:29:52 UTC
*** Bug 311979 has been marked as a duplicate of this bug. ***
Comment 10 Samuel 2012-12-21 11:04:28 UTC
If this bug has been fixed, then I cannot understand why I cannot get cursor response after a file rename with Dolphin.  I am using Kubuntu 12.10 and KDE 4.9.90.  I get the same response on two different Laptops with 12.10 and one desktop with 13.04 Alpha1.


________________________________
 From: Frank Reininghaus <frank78ac@googlemail.com>
To: sbc_hates_spam@yahoo.com.au 
Sent: Thursday, 20 December 2012 9:59 PM
Subject: [Bug 311206] Dolphin does not restore focus on the file view after dismissing inline-rename box with enter
 
https://bugs.kde.org/show_bug.cgi?id=311206

Frank Reininghaus <frank78ac@googlemail.com> changed:

           What    |Removed                     |Added
----------------------------------------------------------------------------
                 CC|                            |sbc_hates_spam@yahoo.com.au

--- Comment #9 from Frank Reininghaus <frank78ac@googlemail.com> ---
*** Bug 311979 has been marked as a duplicate of this bug. ***
Comment 11 Frank Reininghaus 2012-12-21 14:16:43 UTC
(In reply to comment #10)
> If this bug has been fixed, then I cannot understand why I cannot get cursor
> response after a file rename with Dolphin.  I am using Kubuntu 12.10 and KDE
> 4.9.90.

The 4.9.90 packages were made before the bug was fixed.